@@ -79,6 +79,11 @@ case $code in
 	amixer -q set $HEADPHONE_LABEL on
 	show_volume
 	;;
+	# F+F5 -- toggle vga
+	0000003[012])
+	notify
+	/etc/acpi/actions/vga-toggle.sh
+	;;
     # Fn+F9 -- increase volume
     00000015)
 	amixer -q set $VOLUME_LABEL 2+ unmute
